corrected code after check up the html code by W3C

--- a/.htaccess
+++ b/.htaccess
@@ -33,3 +33,5 @@
   ExpiresByType text/css "access plus 10 minutes"
   ExpiresByType application/javascript "access plus 10 minutes"
 </IfModule>
+
+Header always set Permissions-Policy "interest-cohort=()"
