added expiresdefault in htaccess file

--- a/.htaccess
+++ b/.htaccess
@@ -15,6 +15,7 @@
 <IfModule mod_expires.c>
 	ExpiresActive On
 
+  ExpiresDefault "access plus 1 month"
 	ExpiresByType image/webp "access plus 1 year"
   ExpiresByType text/css "access plus 1 year"
   ExpiresByType text/javascript "access plus 1 year"
