--- a/.htaccess
+++ b/.htaccess
@@ -23,10 +23,7 @@
 </IfModule>
 
 <IfModule mod_headers.c>
-    <FilesMatch "\.(webp)$">
-        Header set Cache-Control "max-age=31536000, public"
-    </FilesMatch>
-    <FilesMatch "\.(css|js)$">
+     <FilesMatch "\.(webp|css|js)$">
         Header set Cache-Control "max-age=31536000, public"
     </FilesMatch>
 </IfModule>
